Fix comment box for long phrases without whitespaces
fix #7302

--- a/src/api/app/assets/stylesheets/webui2/comments.scss
+++ b/src/api/app/assets/stylesheets/webui2/comments.scss
@@ -1,5 +1,7 @@
 #comments {
   .media .media-body {
+    @extend .text-word-break-all;
+
     pre, code {
       @extend .p-2;
       @extend .bg-light;
